--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -209,3 +209,27 @@ code
 
   .line
     height: 22px
+
+.link-card
+  border: 1px solid #e0e0e0
+  padding: 10px
+  margin: 10px 0
+  border-radius: 5px
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.1)
+
+  h4 a
+    text-decoration: none
+    color: #3498db
+
+  .link-info
+    display: flex
+    flex-direction: column
+    gap: 8px
+
+    .platform-language
+      display: flex
+      justify-content: space-between
+
+    div
+      font-size: 14px
+
