--- a/themes/cactus/source/css/style.styl
+++ b/themes/cactus/source/css/style.styl
@@ -217,7 +217,7 @@ code
   border-radius: 5px
   box-shadow: 2px 2px 10px rgba(0,0,0,0.1)
 
-  h4 a
+  h3 a
     text-decoration: none
     color: #3498db
 
@@ -227,8 +227,8 @@ code
     gap: 8px
 
     .platform-language
-      display: flex
-      justify-content: space-between
+      //display: flex
+      //justify-content: space-between
 
     div
       font-size: 14px
